--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "zhf.select-all",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "no description",
     "main": "dist/index.min.js",
     "scripts": {
@@ -31,6 +31,7 @@
         "eslint-plugin-standard": "^3.0.1",
         "gulp": "^3.9.1",
         "gulp-babel": "^7.0.0",
+        "gulp-browserify": "^0.5.1",
         "gulp-rename": "^1.2.2",
         "gulp-uglify": "^3.0.0",
         "jest": "^22.1.1"
